--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "joi": "^17.5.0",
-        "mongoose": "^6.1.3"
+        "joi-objectid": "^4.0.2",
+        "moment": "^2.29.1",
+        "mongoose": "^6.1.3",
+        "node-schedule": "^2.1.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
